--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Class:<input name="class"></input>
             </lable>
             <lable>
-                Name:<input name="user"></input>
+                Name:<input name="name"></input>
             </lable>
             <button>Adventure on!</button>
         </form>
